appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to ingredients section"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Add ingredient"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::${INDEX}::QuantityInput"
    direction: UP
    speed: 40
    centerElement: true
    label: "Scroll to up in case button was too down"

- tapOn:
    id: "RecipeIngredients::${INDEX}::QuantityInput"
    label: "Focus on ingredient quantity"

- runFlow:
    when:
      visible:
        id: "RecipeIngredients::${INDEX}::QuantityInput"
        text: ".+"
    commands:
      - eraseText:
          label: "Erase the existing ingredient quantity"

- inputText:
    text: "${QUANTITY}"
    label: "Enter ingredient quantity"

- hideKeyboard:
    label: "Hide keyboard"

- tapOn:
    id: "RecipeIngredients::${INDEX}::NameInput::CustomTextInput"
    label: "Focus on ingredient name"

- runFlow:
    when:
      visible:
        id: "RecipeIngredients::${INDEX}::NameInput::CustomTextInput"
        text: ".+"
    commands:
      - eraseText:
          label: "Erase the existing ingredient name"

- inputText:
    text: "${NAME}"
    label: "Enter ingredient name"

- pressKey: "ENTER"
