appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation section"

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Add preparation step"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::${INDEX}::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation step input"

- tapOn:
    id: "RecipePreparation::EditableStep::${INDEX}::TextInputContent::CustomTextInput"
    label: "Focus on preparation step content"

- inputText:
    text: "${TEXT}"
    label: "Enter preparation step"

- hideKeyboard:
    label: "Close the keyboard"
