appId: "com.recipedia"
---
- tapOn:
    id: "RecipeImage::RoundButton"
    label: "Tap on camera button of recipe image"
- runFlow:
    file: ../../../../asserts/modal/fr/CameraModalNoImages.yaml
    label: "Check camera modal is displayed in French"
- tapOn:
    id: "Modal::Camera::RoundButton"
    label: "Select camera option"
- runFlow:
    file: ../ocr/android/takePhoto.yaml
    when:
      platform: Android
    label: "Take photo on Android"
# TODO iOS
#- runFlow:
#    file: ../ocr/iOS/takePhoto.yaml
#    when:
#      platform: iOS
#    label: "Take photo on iOS"
- tapOn:
    id: "Modal::List#0::SquareButton::Image"
    label: "Select camera picture"

- runFlow:
    file: ../ocr/android/validateWithoutCropping.yaml
    when:
      platform: Android
    label: "Validate without cropping on Android"
# TODO iOS
#- runFlow:
#    file: ../ocr/iOS/validateWithoutCropping.yaml
#    when:
#      platform: iOS
#    label: "Validate without cropping on iOS"
