appId: "com.recipedia"
---
- runFlow:
    file: "../../en/addRecipeImage.yaml"
    label: "Add recipe image"

- tapOn:
    id: "RecipeTitle::CustomTextInput"
    label: "Press the TextInput of title"

- inputText:
    text: "Aiguillettes de poulet a la sauce satay"
    label: "Enter text for recipe title"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipeDescription::CustomTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to description text input"

- tapOn:
    id: "RecipeDescription::CustomTextInput"
    label: "Press the TextInput of description"

- inputText:
    text: "Cuisinez nos filets de poulet francais avec du riz basmati bio et une sauce satay maison: un condiment asiatique a base de cacahuetes et gingembre !"
    label: "Enter text for recipe description"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to tags's adding button"

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Press the round button of first tags"

- tapOn:
    id: "RecipeTags::List::0::CustomTextInput"
    label: "Press the TextInput of first tags"

- inputText:
    text: "Healthy"
    label: "Enter text for recipe first tag"

- pressKey: enter

- tapOn:
    id: "RecipeTags::RoundButton"
    label: "Press the round button of second tags"

- tapOn:
    id: "RecipeTags::List::1::CustomTextInput"
    label: "Press the TextInput of second tags"

- hideKeyboard:
    label: "Close the keyboard"

- repeat:
    while:
      notVisible:
        text: "Italian"
    commands:
      - swipe:
          start: "50%,40%"
          end: "50%,25%"
          label: "Swipe down to see dropdown items"

- tapOn:
    text: "Italian"
    label: "Press the tag from dropdown list"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    label: "Scroll to ingredients section"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of first ingredient"

- tapOn:
    id: "RecipeIngredients::0::QuantityInput"
    label: "Press the TextInput of first ingredient's quantity"

- inputText:
    text: "200"
    label: "Enter text for recipe first ingredient quantity"

- hideKeyboard:
    label: "Close the keyboard"

- tapOn:
    id: "RecipeIngredients::0::NameInput::CustomTextInput"
    label: "Press the TextInput of first ingredient's name"

- inputText:
    text: "Chicken Breast"
    label: "Enter text for recipe first ingredient name"

- pressKey: Enter

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    label: "Scroll to ensure add button is still visible"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of second ingredient"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    label: "Scroll to ensure add button is still visible"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of third ingredient"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::1::QuantityInput"
    direction: DOWN
    speed: 60
    label: "Scroll to second ingredient quantity input"

- tapOn:
    id: "RecipeIngredients::1::QuantityInput"
    label: "Press the TextInput of second ingredient's quantity"

- inputText:
    text: "2"
    label: "Enter text for recipe second ingredient quantity"

- pressKey: Enter

- tapOn:
    id: "RecipeIngredients::1::NameInput::CustomTextInput"
    label: "Press the TextInput of second ingredient's name"

- inputText:
    text: "Oni"
    label: "Enter text for recipe second ingredient name (partial)"

- hideKeyboard:
    label: "Hide the keyboard"

- tapOn:
    id: "TextInputWithDropDown::List::Onions"
    label: "Press the ingredient from the dropdown"

- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to ensure add button is visible"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press the round button of third ingredient"

- tapOn:
    id: "RecipeIngredients::2::NameInput::CustomTextInput"
    label: "Press the TextInput of third ingredient's name"

- hideKeyboard:
    label: "Hide the keyboard "

- tapOn:
    id: "TextInputWithDropDown::List::Avocado"
    label: "Press the ingredient from the dropdown"

- tapOn:
    id: "RecipeIngredients::2::QuantityInput"
    label: "Press the TextInput of third ingredient's quantity"

- inputText:
    text: "5"
    label: "Enter text for recipe third ingredient quantity"

- pressKey: Enter

- scrollUntilVisible:
    element:
      id: "RecipeTime::NumericTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to persons section"

- tapOn:
    id: "RecipeTime::NumericTextInput"
    label: "Press the TextInput of time"

- inputText:
    text: "20"
    label: "Enter text for recipe time"

- pressKey: Enter

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to preparation section"

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press the round button of first preparation"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to first preparation title input"

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of first preparation title"

- inputText:
    text: "Le riz"
    label: "Enter text for recipe first preparation title"

- hideKeyboard:
    label: "Close the keyboard"

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    label: "Press the TextInput of first preparation paragraph"

- inputText:
    text: "Portez a ebullition une casserole d'eau salee.Faites cuire le riz selon les indications du paquet.Pendant ce temps, preparez les filets de poulet a la sauce satay."
    label: "Enter text for recipe first preparation paragraph"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to see the add button of second preparation"

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press the round button of second preparation"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::1::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 60
    label: "Scroll to second preparation title input"

- tapOn:
    id: "RecipePreparation::EditableStep::1::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of second preparation title"

- inputText:
    text: "La sauce"
    label: "Enter text for recipe second preparation title"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to preparation section"

- tapOn:
    id: "RecipePreparation::EditableStep::1::TextInputContent::CustomTextInput"
    label: "Press the TextInput of second preparation paragraph"

- inputText:
    text: "Dans le bol d'un mixeur, deposez les ingredients suivants :"
    label: "Enter text for recipe second preparation paragraph (first line)"

- pressKey: enter

- inputText:
    text: "epluchez et hachez le gingembre."
    label: "Enter text for recipe second preparation paragraph (second line)"

- pressKey: enter

- inputText:
    text: "Ajoutez les cacahuetes, le sucre et le lait de coco."
    label: "Enter text for recipe second preparation paragraph (third line)"

- pressKey: enter

- inputText:
    text: "Salez, poivrez. Mixez jusqu'a obtenir une texture homogene."
    label: "Enter text for recipe second preparation paragraph (fourth line)"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to second preparation title input"

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    waitToSettleTimeoutMs: 0
    retryTapIfNoChange: false
    label: "Press the round button of third preparation"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::2::TextInputTitle::CustomTextInput"
    direction: DOWN
    speed: 60
    label: "Scroll to third preparation title input"

- tapOn:
    id: "RecipePreparation::EditableStep::2::TextInputTitle::CustomTextInput"
    label: "Press the TextInput of third preparation title"

- inputText:
    text: "LA CUISSON DU POULET"
    label: "Enter text for recipe third preparation title"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::2::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to third preparation paragraph input"

- tapOn:
    id: "RecipePreparation::EditableStep::2::TextInputContent::CustomTextInput"
    label: "Press the TextInput of third preparation paragraph"

- inputText:
    text: "Coupez les filets de poulet en lanieres.\nemincez l'oignon.\nPressez ou hachez l'ail.\nDans une poele, faites chauffer un filet d'huile de cuisson a feu moyen a vif.\n"
    label: "Enter text for recipe third preparation paragraph"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "Recipe::RecipeNutrition::NutritionEmptyState::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    label: "Scroll to see the nutrition add button"
