appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePreparation::AddButton::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation add button"

- tapOn:
    id: "RecipePreparation::AddButton::RoundButton"
    label: "Press new preparation step button"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::Content"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation step"

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputTitle::CustomTextInput"
    label: "Press preparation step title"

- inputText:
    text: "Step title"
    label: "Write the preparation step title in the input text"

- hideKeyboard:
    label: "Close the keyboard"

- scrollUntilVisible:
    element:
      id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to preparation content"

- tapOn:
    id: "RecipePreparation::EditableStep::0::TextInputContent::CustomTextInput"
    label: "Press preparation step paragraph"

- inputText:
    text: "Step paragraph"
    label: "Write the preparation step paragraph in the input text"

- hideKeyboard:
    label: "Close the keyboard"
