appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeTags::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to tags's adding button"

- tapOn:
    id: "RecipeTags::RoundButton-content"
    label: "Add a new tag"

- tapOn:
    id: "RecipeTags::List::0::CustomTextInput"
    label: "Press the new tag TextInput"

- inputText:
    text: "Japanese"
    label: "Write the tag in the input text"

- pressKey: enter
