appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePersons::NumericTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to person section"

- tapOn:
    id: "RecipePersons::NumericTextInput"
    label: "Press person input"

- inputText:
    text: "321"
    label: "Write the number of person in the input text"

- hideKeyboard:
    label: "Close the keyboard"
