appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeIngredients::AddButton::RoundButton"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to ingredients section"

- tapOn:
    id: "RecipeIngredients::AddButton::RoundButton"
    label: "Press new ingredient button"

- tapOn:
    id: "RecipeIngredients::0::NameInput::CustomTextInput"
    label: "Press on ingredient name input"

- inputText:
    text: "Celery"
    label: "Write the ingredient name in the input text"

- hideKeyboard:
    label: "Close the keyboard"
