appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeTime::NumericTextInput"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to time section"

- scrollUntilVisible:
    element:
      id: "RecipeTime::NumericTextInput"
    direction: DOWN
    speed: 60
    label: "Scroll to time input"

- tapOn:
    id: "RecipeTime::NumericTextInput"
    label: "Press time input"

- inputText:
    text: "56789"
    label: "Write the time in the input text"

- hideKeyboard:
    label: "Close the keyboard"
