appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeDescription::OpenModal::RoundButton"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to description section"

- tapOn:
    id: "RecipeDescription::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe description"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: description
    when:
      platform: Android
# TODO iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select description from modal for OCR"
    when:
      platform: Android
# TODO iOS

- extendedWaitUntil:
    visible:
      id: "RecipeDescription::CustomTextInput"
    timeout: 10000
    label: "Wait for description to be populated by OCR"
