appId: "com.recipedia"
---
# First OCR field - initializes the gallery and modal counter
- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: image
    when:
      platform: Android
# TODO iOS

- runFlow:
    file: "../../../../fab/expand.yaml"
    label: "Setup - Expand FAB menu"

- tapOn:
    id: "GalleryButton"
    label: "Open gallery for OCR"

- runFlow:
    file: ../android/selectFromGallery.yaml
    when:
      platform: Android
# TODO iOS

- tapOn:
    id: "RecipeImage::RoundButton"
    label: "Tap on OCR button of recipe image"

- tapOn:
    id: "Modal::List#0::SquareButton::Image"
    label: "Select first image from app modal"

- runFlow:
    file: ../android/validateWithoutCropping.yaml
    when:
      platform: Android
# TODO iOS

- evalScript: ${output.modalImageCounter = 1}
