appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipeIngredients::OpenModal::RoundButton"
    direction: UP
    speed: 40

- tapOn:
    id: "RecipeIngredients::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe ingredients"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: ingredients
    when:
      platform: Android
# TODO iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select ingredients from modal for OCR"
    when:
      platform: Android
# TODO iOS

- repeat:
    while:
      visible:
        id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::Title"
    commands:
      - tapOn:
          id: "RecipeValidation::ValidationQueue::Ingredient::SimilarityDialog::AddButton"
          label: "Select to add the ingredient"

      - tapOn:
          id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::Menu::Button"
          label: "Select the ingredient type"
      - tapOn:
          id: "menu-item"
          label: "Select any ingredient type"

      - tapOn:
          id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::Unit::CustomTextInput"
          label: "Tap on the ingredient unit"
      - inputText:
          text: "g"
          label: "Enter the ingredient unit"
      - hideKeyboard:
          label: "Close the keyboard"

      - assertVisible:
          id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
          enabled: true
          label: "Verify Add button is enabled"

      - tapOn:
          id: "RecipeValidation::ValidationQueue::Ingredient::ItemDialog::AddModal::ConfirmButton"
          label: "Validate the ingredient as is"

- extendedWaitUntil:
    visible:
      id: "RecipeIngredients::0::NameInput::CustomTextInput"
    timeout: 10000
    label: "Wait for first ingredient to be populated by OCR"
