appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "RecipePreparation::OpenModal::RoundButton"
    direction: DOWN
    speed: 90
    centerElement: true

- tapOn:
    id: "RecipePreparation::OpenModal::RoundButton"
    label: "Tap on OCR button of recipe preparation"

- runFlow:
    file: ../android/addMedia.yaml
    env:
      FIELD_NAME: preparation
    when:
      platform: Android
# TODO iOS

- runFlow:
    file: ../android/selectMostRecentFromModal.yaml
    label: "Select preparation from modal for OCR"
    when:
      platform: Android
# TODO iOS

- extendedWaitUntil:
    visible:
      id: "RecipePreparation::EditableStep::0::Step"
    timeout: 10000
    label: "Wait for first preparation step to be populated by OCR"
